<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient1"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/content_desc1"
        android:layout_gravity="center"
        app:srcCompat="@drawable/school_logo" />

    <EditText
        android:id="@+id/registerE"
        android:autofillHints="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/quicksand"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/text_input"
        android:drawableLeft="@drawable/ic_mail" />

    <EditText
        android:id="@+id/registerP"
        app:passwordToggleEnabled="true"
        android:autofillHints="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/text_input"
        android:drawableLeft="@drawable/ic_key" />

    <Button
        android:id="@+id/registerB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        app:backgroundTint="@color/blue" />

    <TextView
        android:id="@+id/registerR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>