<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".PassForgot">

    <ImageView
        android:id="@+id/returnB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/back_button"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/forgot_pass"
        app:srcCompat="@drawable/pass_forgot_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/resetE"
        android:autofillHints="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/quicksand"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/text_input"
        android:drawableLeft="@drawable/ic_mail"
        android:elevation="6dp"/>

    <Button
        android:id="@+id/resetB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:elevation="6dp"
        app:backgroundTint="@color/task_blue"
        android:drawableLeft="@drawable/ic_done"
        android:drawableTint="@color/white" />

</LinearLayout>