<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tri_wp">
<!--TextView is used to show the user what this section is for-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/new_task"
        android:gravity="center"
        android:padding="25dp"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="30sp" />
<!--This LinearLayout is for the task entry section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingTop="100dp">
        
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/task"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_bold"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <EditText
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task"
                android:textColorHint="@color/white"
                android:fontFamily="@font/quicksand"
                android:layout_margin="10dp"/>
        </RelativeLayout>
        
    </LinearLayout>
<!--This LinearLayout is for description section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand_bold"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <EditText
                android:id="@+id/task2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_desc"
                android:textColorHint="@color/white"
                android:fontFamily="@font/quicksand"
                android:layout_margin="10dp"/>
        </RelativeLayout>
    </LinearLayout>
<!--LinearLayout for Save & Cancel Button respectively-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/addtask_button"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp">
            <Button
                android:id="@+id/saveBtn"
                android:text="@string/save"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20sp"
                android:textColor="@color/task_blue"
                android:background=""
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/addtask_button"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            >
            <Button
                android:id="@+id/cancelBtn"
                android:text="@string/cancel"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20sp"
                android:textColor="@color/task_blue"
                android:background=""
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>