<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient1"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"/>

    <EditText
        android:id="@+id/loginE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/text_input" />

    <EditText
        android:id="@+id/loginP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/text_input"/>

    <Button
        android:id="@+id/loginB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue" />

    <TextView
        android:id="@+id/loginR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>