<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/update_task"
        android:gravity="center"
        android:padding="25dp"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/task"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_bold"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <EditText
                android:id="@+id/mEditTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_margin="10dp"
                android:padding="7dp"
                android:background="@drawable/text_input" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <EditText
                android:id="@+id/mEditDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_desc"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:padding="7dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_input"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/addtask_button">

            <Button
                android:id="@+id/updateBtn"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/update"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20sp"
                android:textColor="@color/task_blue"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/addtask_button"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp">
            <Button
                android:id="@+id/deleteBtn"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/delete"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20sp"
                android:textColor="@color/task_blue"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>